# BPM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
bpm/: __init__.py  app.py  core.py  mode_solver.py  pml.py  refractive_index.py
docs/: RFD-000-BPM-Code-Quality-and-Feature-Improvements.md
examples/: app.py  example_mmi.py  example_waveguide.py
tests/: __init__.py  test_core.py  test_mode_solver.py  test_performance.py  test_refractive_index.py  test_stability.py
